@@ -31,6 +31,12 @@ public class CaratulasdecinePosterPlugin extends AbstractMoviePosterPlugin {
 
     public CaratulasdecinePosterPlugin() {
         super();
+        
+        // Check to see if we are needed
+        if (!isNeeded()) {
+            return;
+        }
+        
         webBrowser = new WebBrowser();
     }
 
