@@ -32,6 +32,12 @@ public class FilmUpItPosterPlugin extends AbstractMoviePosterPlugin {
 
     public FilmUpItPosterPlugin() {
         super();
+        
+        // Check to see if we are needed
+        if (!isNeeded()) {
+            return;
+        }
+        
         webBrowser = new WebBrowser();
     }
 
