@@ -28,6 +28,12 @@ public class YahooPosterPlugin extends AbstractMoviePosterPlugin {
 
     public YahooPosterPlugin() {
         super();
+        
+        // Check to see if we are needed
+        if (!isNeeded()) {
+            return;
+        }
+        
         webBrowser = new WebBrowser();
     }
 
